Rename email v2 API key
